--- a/vyos-routing.yml
+++ b/vyos-routing.yml
@@ -11,6 +11,7 @@
   gather_facts: false
 
   tasks:
+
   - name: Copying ssh key for vyos-c1
     expect:
       command: ssh-copy-id vyos-c1
@@ -19,5 +20,12 @@
         '(?i)password:': '{{ admin_pass }}\n'
     changed_when: false
 
+
+- hosts: vyos-c1
+  gather_facts: false
+  connection: network_cli
+
+  roles:
+    - vyos-ospf-area0
 
 ...
