--- a/vyos-routing.yml
+++ b/vyos-routing.yml
@@ -28,4 +28,28 @@
   roles:
     - vyos-ospf-area0
 
+- hosts: localhost
+  gather_facts: false
+
+  tasks:
+
+  - name: Copying ssh key for vyos-c1
+    expect:
+      command: ssh-copy-id {{ item }}
+      responses:
+        'Are you sure you want to continue connecting (yes/no)?': 'yes\n'
+        '(?i)password:': '{{ admin_pass }}\n'
+    changed_when: false
+    loop:
+      - vyos-net2-1
+      - vyos-net2-2
+
+- hosts: net2
+  gather_facts: false
+  connection: network_cli
+
+  roles:
+    - vyos-ospf-area0
+
+
 ...
