--- a/roles/vyos-ospf-area0/tasks/vyos-routing.yml
+++ b/roles/vyos-ospf-area0/tasks/vyos-routing.yml
@@ -3,7 +3,7 @@
 - name: configuring ospf loopback
   vyos_config:
     lines:
-       - set interfaces loopback lo address {{ lo }}
+       - set interfaces dummy dum0 address {{ lo }}
     save: yes
 
 - name: configuring ospf neworks
@@ -20,11 +20,11 @@
       - set protocols ospf default-information originate metric 10
       - set protocols ospf default-information originate metric-type 2
       - set protocols ospf log-adjacency-changes
-      - set protocols ospf parameters router-id 1.1.1.1
+      - set protocols ospf parameters router-id {{ dumb }}
       - set protocols ospf redistribute connected metric-type 2
       - set protocols ospf redistribute connected route-map CONNECT
       - set policy route-map CONNECT rule 10 action permit
-      - set policy route-map CONNECT rule 10 match interface lo
+      - set policy route-map CONNECT rule 10 match interface dum0
     save: yes
 
 ...
